# jsonlogic

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  publish-py.yaml
cpp/: .clangd  CMakeLists.txt  CMakePresets.json  README.md  generatecc.sh
cpp/.github/workflows/: ci.yaml
cpp/.vscode-local/: c_cpp_properties.json  settings.json
cpp/bench/: CMakeLists.txt
cpp/bench/src/: benchmark-complex1.cpp  benchmark-equality.cpp  benchmark-generic.cpp  benchmark-membership.cpp  benchmark-simple-and.cpp  benchmark1.cpp  complex1.json  simple-and.json
cpp/examples/: CMakeLists.txt  testeval.cc
cpp/examples/src/: testeval.cc
cpp/include/jsonlogic/: logic.hpp
cpp/include/jsonlogic/details/: ast-core.hpp  ast-full.hpp
cpp/profile/: CMakeLists.txt
cpp/profile/src/: profile-jl-eq.cpp
cpp/src/: logic.cc
cpp/tests/: CMakeLists.txt  in-001.json  in-004.json  membership-001.json  run-tests.sh
cpp/tests/json/: eq-010.json  in-002.json  in-003.json  run-tests.sh
cpp/tests/src/: testeval.cpp
py/.github/workflows/: pr.yml  publish.yml
py/src/jsonlogic/: __init__.py
